--- a/CarNotifyWebApi/CarNotifyWebApi/CarNotifyWebApi.csproj
+++ b/CarNotifyWebApi/CarNotifyWebApi/CarNotifyWebApi.csproj
@@ -205,26 +205,57 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ATKEntities.edmx</DependentUpon>
     </Compile>
+    <Compile Include="ATKLocal.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ATKLocal.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ATKLocal.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ATKLocal.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ATKLocal.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ATKLocal.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="BLACKLIST.cs">
+      <DependentUpon>ATKLocal.tt</DependentUpon>
+    </Compile>
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="NOTIFYLOG.cs">
-      <DependentUpon>ATKEntities.tt</DependentUpon>
+      <DependentUpon>ATKLocal.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QRINFO.cs">
-      <DependentUpon>ATKEntities.tt</DependentUpon>
+      <DependentUpon>ATKLocal.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>ATKLocal.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagrams_Result.cs">
+      <DependentUpon>ATKLocal.tt</DependentUpon>
     </Compile>
     <Compile Include="sysdiagrams.cs">
-      <DependentUpon>ATKEntities.tt</DependentUpon>
+      <DependentUpon>ATKLocal.tt</DependentUpon>
     </Compile>
-    <Compile Include="Token.cs">
-      <DependentUpon>ATKEntities.tt</DependentUpon>
+    <Compile Include="TOKEN.cs">
+      <DependentUpon>ATKLocal.tt</DependentUpon>
+    </Compile>
+    <Compile Include="USERS.cs">
+      <DependentUpon>ATKLocal.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\ATK.mdf" />
+    <Content Include="App_Data\ATK_log.ldf">
+      <DependentUpon>ATK.mdf</DependentUpon>
+    </Content>
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="ATKEntities.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -235,6 +266,16 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>ATKEntities.edmx</DependentUpon>
       <LastGenOutput>ATKEntities.cs</LastGenOutput>
+    </Content>
+    <Content Include="ATKLocal.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ATKLocal.edmx</DependentUpon>
+      <LastGenOutput>ATKLocal.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="ATKLocal.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ATKLocal.edmx</DependentUpon>
+      <LastGenOutput>ATKLocal.cs</LastGenOutput>
     </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -274,6 +315,13 @@
     <Content Include="ATKEntities.edmx.diagram">
       <DependentUpon>ATKEntities.edmx</DependentUpon>
     </Content>
+    <EntityDeploy Include="ATKLocal.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ATKLocal.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="ATKLocal.edmx.diagram">
+      <DependentUpon>ATKLocal.edmx</DependentUpon>
+    </Content>
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
@@ -281,7 +329,9 @@
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -297,7 +347,6 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
